# repair-ai-saas

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  start-local.ps1
.claude/skills/wechat-miniapp-ui-design/: SKILL.md
.github/workflows/: ci.yml
agent-python/: .dockerignore  Dockerfile  README.md  pyproject.toml
agent-python/app/: main.py  schemas.py
agent-python/app/core/: config.py
agent-python/app/services/: llm_service.py  vector_service.py
agent-python/repair_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agent-python/tests/: test_vector_service.py
backend-java/: Dockerfile  pom.xml
deploy/: README.md
deploy/nginx/: repair-ai.conf
deploy/scripts/: backup-mysql.sh  backup-qdrant.sh  backup-uploads.sh  check-env.sh  crontab.example  init-demo-data.sh  restore-mysql.sh  restore-qdrant.sh  restore-uploads.sh
docs/: api.md  architecture.md  backup.md  deployment-verification.md  deployment.md  interview.md  miniapp-api-gap.md  miniapp-devtools-checklist.md  miniapp-plan.md  pricing-and-limits.md  product.md  productization-roadmap.md  project-architecture-summary.md  rate-limiting-design.md  roadmap.md  shared-server-deployment.md  trial-customer-onboarding.md  v0.7.0-tenant-lifecycle-plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: ai.ts  auth.ts  documents.ts  http.ts  (+6 more)
miniapp-repair/: app.js  app.json  app.wxss  project.config.json
miniapp-repair/utils/: auth.js  config.js  request.js  status.js  tenant.js
(+161 files in other folders)
