[project]
name = "repair-ai-agent"
version = "0.2.0"
description = "AI 售后维修问答代理服务"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "qdrant-client>=1.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
agent = "app.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
